# gh-masto-poster

./: .gitignore  config.example.ini  pyproject.toml
gh_masto_poster/: __main__.py  config.py  models.py
gh_masto_poster/github/: api.py
src/gh_masto_poster/: __main__.py  config.py  state.py  templates.py
src/gh_masto_poster/github/: api.py  events.py  feeds.py
src/gh_masto_poster/mastodon/: poster.py
tests/: test_api.py  test_config.py  test_events.py  test_feeds.py  test_models.py  test_poster.py  test_state.py  test_templates.py
