[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-masto-poster"
version = "0.1.0"
description = "Bridge GitHub activity to Mastodon posts using Atom feeds and the GitHub API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
gh-masto-poster = "gh_masto_poster.__main__:main"
